--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "@tarojs/plugin-mock",
-  "version": "0.0.6",
-  "description": "Taro 数据 Mock 插件",
+  "name": "tarojs-plugin-generator",
+  "version": "0.0.1",
+  "description": "Taro Generator 生成器",
   "main": "index.js",
   "scripts": {
     "build": "npm run clean && npm run prod",
     "dev": "tsc -w",
     "prod": "tsc",
     "clean": "rimraf dist",
+    "publish": "npm run build &&npm version patch && npm publish",
     "test": "jest",
     "test:dev": "jest --watch"
   },
   "files": [
-    "src",
     "dist",
     "index.js",
     "package.json"
@@ -31,8 +31,7 @@
   },
   "homepage": "https://github.com/NervJS/tarojs-plugin-mock#readme",
   "devDependencies": {
-    "@types/express": "^4.17.3",
-    "@types/jest": "^25.1.4",
+    "@tarojs/service": "^3.0.14",
     "@types/node": "^13.9.8",
     "jest": "^25.2.4",
     "rimraf": "^3.0.2",
@@ -41,11 +40,6 @@
   },
   "dependencies": {
     "@tarojs/helper": "2.2.7",
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "get-port": "^5.1.1",
-    "glob": "^7.1.6",
-    "http-proxy-middleware": "^1.0.3",
-    "path-to-regexp": "^6.1.0"
+    "glob": "^7.1.6"
   }
 }
