--- a/.npmrc
+++ b/.npmrc
@@ -1,5 +1,5 @@
-registry=https://registry.npm.taobao.org
-# registry=https://registry.npmjs.org
+# registry=https://registry.npm.taobao.org
+registry=https://registry.npmjs.org
 disturl=https://npm.taobao.org/dist
 sass_binary_site=https://npm.taobao.org/mirrors/node-sass/
 phantomjs_cdnurl=https://npm.taobao.org/mirrors/phantomjs/
