--- a/package.json
+++ b/package.json
@@ -36,10 +36,10 @@
     "jest": "^25.2.4",
     "rimraf": "^3.0.2",
     "ts-jest": "^25.3.0",
+    "@tarojs/helper": "^3.0.14",
     "typescript": "^3.8.3"
   },
   "dependencies": {
-    "@tarojs/helper": "2.2.7",
     "glob": "^7.1.6"
   }
 }
