--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "tsc -w",
     "prod": "tsc",
     "clean": "rimraf dist",
-    "test": "jest",
+    "test": "node dist/test/index",
     "test:dev": "jest --watch"
   },
   "files": [
